# stardictd

./: README.md
downloads/: ReadMe.txt  TODO.txt  stardict-client-0.4.tar.xz  stardict-client-0.5.tar.xz  stardict.cn_web_20150419.tar.bz2  stardict.org-0.4.tar.xz  stardict.org-0.4_2.tar.xz  stardict.org-0.5.1.tar.xz  stardict.org-0.5.2.tar.xz  stardict.org-0.5.2_2.tar.xz  stardict.org-0.5.tar.xz  stardictd-0.4.1.tar.xz  stardictd-0.4.1_2.tar.xz  stardictd-0.4.tar.xz  stardictd-0.5.tar.xz  stardictd-0.5_2.tar.xz
source_codes/stardict-client/: ChangeLog  INSTALL  Makefile.am  README  autogen.sh  configure.ac
source_codes/stardict-client/src/: Makefile.am  codes.h  command.cpp  command.h  net.cpp  net.h  printdata.cpp  printdata.h  stardict-client.cpp
source_codes/stardict.org/: AUTHORS  ChangeLog  INSTALL  README  about.php  account.php  admin.php  advertise.php  ajax.php  ajax_win_default.php  arg.php  backend.php  browserplugin.php  business.php  changepassword.php  collatefunc-backend.php  define-backend.php  desktop.php  dictinfo.php  dictmanage.php  dirinfo.php  download.php  downloadit.php  downloadlevel.inc.php  email-backend.php  end.inc.php  faq.php  finance.php  genselectjs.php  head.php  help.php  helptranslate.php  improve.php  index.php  initselect.php  lang.de_DE.inc  lang.ko.inc  lang.ru_RU.inc  lang.sk.inc  lang.uyghur.inc  (+28 more)
source_codes/stardict.org/css/: tree.css  window.css  wordlist.css
source_codes/stardict.org/css/IE/: window.css
source_codes/stardict.org/download/: index.php
source_codes/stardict.org/files/: stardict.src
source_codes/stardict.org/js/: account.js  ajax.js  dictmanage.js  download.js  initselect.js  lookup.js  preferences.js  query.js  search-plugin.js  showhide.js  stardict.js  x_StarDictwin.js
source_codes/stardictd/: ChangeLog  INSTALL  Makefile.am  README  TODO  autogen.sh  configure.ac
source_codes/stardictd/doc/: Makefile.am  StarDict-Protocol  StarDict-Protocol_v04
source_codes/stardictd/etc/: Makefile.am  stardict.sql  stardictd.conf
source_codes/stardictd/src/: Makefile.am  base64.h  codes.h  conf.cpp  conf.h  daemon.cpp  daemon.h  db.cpp  db.h  log.cpp  log.h  main.cpp  md5.c  net.cpp  net.h  rsa.h  servicemain.cpp  servicemain.h  stardictdmain.cpp  stardictdmain.h
source_codes/stardictd/src/lib/: Makefile.am  common.hpp  data.cpp  data.hpp  getuint32.h  stardict_libconfig.h  stddict.cpp  stddict.hpp
source_codes/stardictd/src/tools/: Makefile.am  download.sh  genxmlfiles.cpp  stardict.download  undictzip.cpp
