noinst_LIBRARIES = libstardict.a

libstardict_a_SOURCES = \
	lib.cpp lib.h	\
	dictziplib.cpp dictziplib.hpp	\
	distance.cpp distance.h	\
	mapfile.hpp file.hpp	\
	kmp.cpp kmp.h	\
	my_global.h m_ctype.h m_string.h \
	ctype-mb.cpp ctype-utf8.cpp ctype-uca.cpp	\
	collation.cpp collation.h \
	data.hpp data.cpp \
	stddict.cpp stddict.hpp \
	common.cpp common.hpp \
	storage.cpp storage.h \
	dictmask.h getuint32.h	\
	stardict_libconfig.h

AM_CPPFLAGS = @STARDICTD_CFLAGS@
