noinst_PROGRAMS = genxmlfiles undictzip

AM_CPPFLAGS = $(STARDICTD_CFLAGS)

genxmlfiles_LDFLAGS =
genxmlfiles_LDADD = $(STARDICTD_LIBS)
genxmlfiles_SOURCES = genxmlfiles.cpp

undictzip_LDFLAGS =
undictzip_LDADD = $(STARDICTD_LIBS)
undictzip_SOURCES = undictzip.cpp

EXTRA_DIST = download.sh stardict.download
